@@ -1,3 +1,6 @@
+4952.	[bug]		A race condition on shutdown could trigger an
+			assertion failure in dispatch.c. [RT #43822]
+
 4591.	[port]		Addressed some python 3 compatibility issues.
 			Thanks to Ville Skytta. [RT #44955] [RT #44956]
 
